<resources>
    <string name="app_name">EZGO</string>
    <!--page-->
    <string name="login">Login</string>
    <string name="reg">Get Started</string>
    <string name="create">Create Account</string>
    <!--err-->
    <string name="logErr">Email or Password is incorrect</string>
    <!--input-->
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="forgot">Forgot your password?</string>
    <string name="donthave">Don\'t have an account?</string>
    <string name="landingh1">Lets explore the world</string>
    <string name="landingh2">Visit tourist attractions</string>
    <string name="landingh3">Get ready for next trip</string>
    <string name="landing1">lets explore the world with us  just a few click</string>
    <string name="landing2">Find thousand of tourist destinations ready for you to visit</string>
    <string name="landing3">Find thousand of tourist destinations ready for you to visit</string>
    <!--HOME-->
    <string name="head1">Where do you want to explore today?</string>
    <string name="head2">Popular Destinations</string>
    <string name="head3">Popular Tour</string>
    <string name="head4">Popular Products</string>
    <string name="head5">Check on YouTube</string>
    <string name="bus">Bus</string>
    <string name="kereta">Train</string>
    <string name="pesawat">Plane</string>
    <string name="hotel">Hotel</string>
    <string name="tour">Tour</string>

    <!--desc-->
    <string name="bg">background</string>
    <string name="btn">btn</string>
    <string name="btn_b">btnBack</string>
    <string name="btn_s">btnSearch</string>
    <string name="icon">icon</string>
    <string name="line">line</string>

    <!--    Text-->
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="date">Date</string>
    <string name="ddmmyyyy">DD/MM/YYYY</string>
    <string name="passenger">Passenger</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi elementum vestibulum mi quis sodales. Pellentesque magna magna, maximus ac nulla.</string>
    <string name="title_activity_pesawat_view">PesawatViewActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="version">1.0.0</string>
    <string name="about">Selamat datang di EzGO, sahabat perjalanan Anda yang siap membantu Anda menjelajahi dunia dengan mudah dan lancar. EzGO adalah aplikasi perjalanan yang dirancang untuk membuat rencana perjalanan Anda menjadi pengalaman yang tak terlupakan.</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="account">Account</string>
    <string name="account_information">Account Information</string>
    <string name="password_security"><![CDATA[Password & Security]]></string>
    <string name="app">App</string>
    <string name="app_version">App Version</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="aboutP">About</string>
    <string name="settings">Settings</string>
    <string name="delete_account">Delete Account</string>
    <string name="log_out">Log Out</string>
    <string name="home">home</string>
    <string name="explore">Explore</string>
    <string name="order">Order</string>
    <string name="profile">Profile</string>
    <string name="circle">Circle</string>
    <string name="icon2">Icon2</string>
    <string name="icon3">Icon3</string>
    <string name="circle2">Circle2</string>
    <string name="purchase_detail">Purchase Detail</string>
    <string name="ticket_price">Ticket Price</string>
    <string name="ticket_quantity">Ticket Quantity</string>
    <string name="additional_fee">Additional Fee</string>
    <string name="total_price">Total Price</string>
    <string name="order_now">Order Now</string>
    <string name="information">Information</string>
    <string name="description">Description</string>
    <string name="rp">Rp</string>
    <string name="ticket">Ticket</string>
    <string name="explore_now">Explore Now…</string>
    <string name="ticket_type">Ticket Type</string>
    <string name="arrow">arrow</string>
    <string name="logo">logo</string>
    <string name="line2">line2</string>
    <string name="room">Room</string>
    <string name="person">Person</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="location">Location</string>
    <string name="img">img</string>
    <string name="our_team">Our Team</string>
    <string name="payment">Payment</string>
    <string name="paymentM">Choose Payment Method</string>
    <string name="bca">BCA</string>
    <string name="mandiri">Mandiri</string>
    <string name="bni">BNI</string>
    <string name="bri">BRI</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="_00">00</string>
    <string name="titik2">:</string>
    <string name="ezgo_travel">EZGO Travel</string>
    <string name="copy">Copy</string>
    <string name="transfer_amount">Transfer Amount</string>
    <string name="transfer_done">Transfer Done</string>
    <string name="addMore">Add Seat</string>
    <string name="tel">Tel</string>
    <string name="save">Save</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
</resources>