<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".KeretaActivity">

    <!--Top bar-->
    <ImageView
        android:contentDescription="@string/bg"
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/roundedshape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:contentDescription="@string/btn"
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/white_arrow_back_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="120dp"
            android:text="@string/kereta"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:contentDescription="@string/btn"
            android:id="@+id/search"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/white_search_24" />
    </androidx.appcompat.widget.Toolbar>
    <!--Main-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:background="@drawable/roundmain"
        android:elevation="5dp"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <!--From-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:textSize="18sp" />

        <TextView
            android:gravity="start|center"
            android:textStyle="bold"
            android:text="@string/from"
            android:id="@+id/btnFromPlane"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_stroke"
            android:padding="10dp"
            app:drawableStartCompat="@drawable/kereta" />

        <!--To-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/to"
            android:textSize="18sp" />

        <TextView
            android:gravity="start|center"
            android:text="@string/to"
            android:textStyle="bold"
            android:id="@+id/btnToPlane"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_stroke"
            android:padding="10dp"
            app:drawableStartCompat="@drawable/kereta" />
        <!--Date-->
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:gravity="start|center"
            android:id="@+id/calender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_stroke"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="@string/ddmmyyyy"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/baseline_calendar_month_24" />
        <!--Passenger-->
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/passenger"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/shape_stroke"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:contentDescription="@string/icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/baseline_people_alt_24" />

            <Spinner
                android:gravity="start|center"
                android:id="@+id/passanger"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/roundmain"
                android:dropDownWidth="match_parent"
                android:dropDownVerticalOffset="40dp"
                android:popupBackground="@drawable/round_spinner"
                android:spinnerMode="dropdown" />
        </LinearLayout>
        <!--Button-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFilter"
            android:layout_width="340dp"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:text="@string/search"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="10dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>